--- a/index.html
+++ b/index.html
@@ -130,13 +130,10 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Income Tax</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Corporation income tax</a></li>
-	    <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/business-tax-credits.html">Federal tax credits</a></li>
-  <li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc.html">Clean economy investment tax credits</a></li>
-	    <li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc.html">Clean Hydrogen Investment Tax Credit (ITC)</a></li>
-</ol>
+      <li><a href="https://www.canada.ca/en/services/taxes.html">Canada Revenue Agency</a></li>
+      <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Transparency</a></li>
+      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Access to information and privacy</a></li>
+    </ol>
   </div>
 </nav>
 <div data-ajax-replace="/bin/canada/alert/messages.en.html" class="original"></div>
@@ -146,30 +143,19 @@
 	   <br>
 <main role="main" property="mainContentOfPage" class="container">
 
-	
-		<!-- Navigation menu and first H1 -->
-		<nav class="gc-subway provisional">
-			<h1>Clean Hydrogen Investment Tax Credit (ITC)</h1>
-			<ul>
-					<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/about-ch-itc.html">What is the CH ITC</a></li>
-        	
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/who-claim-ch-itc.html">Who can claim</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/projects-qualify-ch-itc.html">What projects qualify</a></li>
-			<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/project-plan-ch-itc.html">Submitting your project plan to NRCan</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/review-decision-ch-itc.html">Our review and decision</a></li>
-			<li><a href="" class="active">Claiming the credit with CRA</a></li>
-			<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/after-claim-ch-itc.html">After you claim</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/reporting-responsibilities-ch-itc.html">Your reporting responsibilities</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/contact-ch-itc.html">Contact us</a></li>
-			</ul>
-	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Claiming the credit</h1>
+		<h1 property="name" id="wb-cont" class="gc-thickline">Access to information and privacy at the Canada Revenue Agency </h1>
 </div>
 
-	<p>Prepare your claim and if you choose, elect into the labour requirements to get the regular credit rate for the Clean Hydrogen ITC.</p>
-		<!-- Page content -->
+	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/">Access to Information Act </a> 
+	and the <a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act.</a>The Access to Information and Privacy (ATIP)  
+	Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.  </p>
+  <section class="alert alert-info">
+  <h3>What's new</h3>
+  <p>The Canada Revenue Agency (CRA) is updating its process for handling representatives’ access to information and privacy (ATIP) requests  
+	  <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a></p>
+</section>
 	
 <div class="mwsbodytext text parbase section">
     
