--- a/index.html
+++ b/index.html
@@ -159,7 +159,14 @@
 	
 <div class="mwsbodytext text parbase section">
     
-<h2>Steps</h2>
+<h2>Request information from the Canada Revenue Agency</h2> 
+	<p>You can get many types of information from the Canada Revenue Agency (CRA), including: </p>
+	<ul>
+    <li>copies of individual’s tax slips </li>
+    <li>business information returns </li>
+    <li>the CRA’s policy manuals </li>  
+	</ul> 
+	<p>Steps for accessing information:</p>
 	<ol class="lst-stps">
 		<li>
 			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/get-ready.html">Get ready to claim</a></h3>
