--- a/index.html
+++ b/index.html
@@ -168,24 +168,32 @@
 	</ul> 
 	<p>Steps for accessing information:</p>
 	<ol class="lst-stps">
-		<li>
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/get-ready.html">Get ready to claim</a></h3>
-		<p>Prepare your documents, determine your credit rate</p>
+		<li> 
+			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/get-ready.html">Check if the information you need is already accessible through CRA services.</a></h3>
+			<p>Typically, this method is the quickest way to obtain the information you require. </p>
 		</li>
 		<li>
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">Calculating the credit</a></h3>
-			<p>Calculate your Clean Hydrogen ITC and credit rates</p>
-		</li>
-		<li>
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/how-claim.html">How to claim the credit</a></h3>
-	<p>How to claim on your corporate tax return, repaying amounts</p>
+			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">make an access to information or personal information request</a></h3>
+			<p>If the information your need isn’t available,make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act; no fee for requests for personal information under the Privacy Act. </p>
 		</li>
 	
 	</ol>
 
 </div>
 
-
+<h2>Contact us </h2> 
+	<p>Our ATIP general mailbox representatives can provide you with: </p> 
+	<ul> 
+		<li>General information on how to make an access to information or personal information request to the CRA</li> 
+		<li>Information on whether your Access to information or personal information request has been received at the CRA</li>
+	</ul> 
+<p><strong>Telephone:</strong></p> 
+	<ul> 
+		<li>613-960-5393 (Ottawa area)</li>  
+		<li>1-866-333-5402 (toll free)</li>
+	</ul> 
+<p><strong>Email:</strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>  
+<p>Note: To send a formal request or to find other ways to ask for information from the CRA, see <a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">request information from the CRA</a>.   </p>
 	</main>
   </section>
 	      
