--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 		</li>
 		<li>
 			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">make an access to information or personal information request</a></h3>
-			<p>If the information your need isn’t available,make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act; no fee for requests for personal information under the Privacy Act. </p>
+			<p>If the information you need isn’t available,make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act; no fee for requests for personal information under the Privacy Act. </p>
 		</li>
 	
 	</ol>
