--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </section>
 	
 <div class="mwsbodytext text parbase section">
-    
+<section class="gc-srvinfo col-md-8 pull-left">    
 <h2>Request information from the Canada Revenue Agency</h2> 
 	<p>You can get many types of information from the Canada Revenue Agency (CRA), including: </p>
 	<ul>
@@ -178,7 +178,26 @@
 		</li>
 	
 	</ol>
+</section> 
+<div class="col-md-4 col-xs-12 pull-right">
+<section class="lnkbx">
+<h2>
+Most requested
+</h2>
 
+<ul> 
+    <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html" rel="external">My Business Account</a></li> 
+    <li><a href="/en/revenue-agency/services/e-services/represent-a-client.html" rel="external">Represent a Client</a></li> 
+    <li><a href="/en/revenue-agency/services/e-services.html" rel="external">All online services</a></li> 
+    <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/gst-hst-netfile.html" rel="external">GST/HST NETFILE</a></li> 
+    <li><a href="/en/revenue-agency/services/e-services/digital-services-businesses/gst-hst-netfile/need-access-code.html" rel="external">GST/HST Access code</a></li> 
+    <li><a href="/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-which-rate/calculator.html">GST/HST calculator (and rates)</a></li> 
+    <li><a href="/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations.html">GST/HST in specific situations</a></li> 
+   
+
+</ul>
+</section>
+</div>
 </div>
 
 <h2>Contact us </h2> 
