--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </section>
 	
 <div class="mwsbodytext text parbase section">   
-<h2>Request information from the Canada Revenue Agency</h2> 
+<h2 id="Request">Request information from the Canada Revenue Agency</h2> 
 	<p>You can get many types of information from the Canada Revenue Agency (CRA), including: </p>
 	<ul>
     <li>copies of individual’s tax slips </li>
@@ -192,7 +192,7 @@
 		<li>1-866-333-5402 (toll free)</li>
 	</ul> 
 <p><strong>Email:</strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>  
-<p>Note: To send a formal request or to find other ways to ask for information from the CRA, see <a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">request information from the CRA</a>.   </p>
+<p>Note: To send a formal request or to find other ways to ask for information from the CRA, see <a href="#Request">request information from the CRA</a>.   </p>
 	</main>
   </section>
 	      
@@ -205,7 +205,7 @@
       <time property="dateModified">2024-06-04</time>
     </dd>
   </dl>
-</div>
+</div> 
 
 </div>
 
