--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	<p>Steps for accessing information:</p>
 	<ol class="lst-stps">
 		<li> 
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/get-ready.html">Check if the information you need is already accessible through CRA services.</a></h3>
+			<h3><a href="step-1-find-information-already-available.html">Check if the information you need is already accessible through CRA services.</a></h3>
 			<p>Typically, this method is the quickest way to obtain the information you require. </p>
 		</li>
 		<li>
