--- a/step-1-find-information-already-available.html
+++ b/step-1-find-information-already-available.html
@@ -145,55 +145,82 @@
 
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Access to information and privacy at the Canada Revenue Agency </h1>
-</div>
+		<h1 property="name" id="wb-cont" class="gc-thickline">Step 1- Find out if the information is already available</h1> 
+	<p>Before sumitting an Access to Information (ATIP) request, you can find the information you need already available through the Canada Revenue Agency (CRA) online services. Accessing information through My Account or My Business Account is the quickest and most efficient method</p>
 
-	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/">Access to Information Act </a> 
-	and the <a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act.</a>The Access to Information and Privacy (ATIP)  
-	Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.  </p>
   <section class="alert alert-info">
-  <h3>What's new</h3>
-  <p>The Canada Revenue Agency (CRA) is updating its process for handling representatives’ access to information and privacy (ATIP) requests  
-	  <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a></p>
-</section>
+  <h3>CRA does not have</h3>
+  <ul> 
+   <li>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Go to <a herf="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html">Service Canada</a>.</li> 
+ <li>Information about your travel history outside Canada. Go to <a herf="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html">Canada Border Services Agency</a>.</li>
+  </ul>
+</section> 
+<h2 class="h3">On this page</h2>
+        <ul>
+          <li><a href="#h-1">Access your personal information</a></li>
+          <li><a href="#h-2">Access your business information </a></li> 
+	  <li><a herf ="#h-3">information about registered charities</a></li> 
+	  <li><a herf ="#h-4">CRA's information holdings</a></li> 
+	  <li><a herf ="#h-5">Other informatino available online</a></li>
+        </ul>	 
 	
-<div class="mwsbodytext text parbase section">   
-<h2 id="Request">Request information from the Canada Revenue Agency</h2> 
-	<p>You can get many types of information from the Canada Revenue Agency (CRA), including: </p>
+<h2 id="h-1">Access your personal information</h2>
+	<p>Go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a> to get the following information:</p> 
+	<ul> 
+	<li>Personal income tax returns</li>  
+	<li>Information slips (for example, T4, T4A, T5, RRSP receipts)</li> 
+	<li>Notices of assessment or reassessment</li>  
+	<li>Statements of income and deductions from the past 3 assessed years</li> 
+	<li>Personal information, such as addresses, direct deposit and representative authorizations</li> 
+	<li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>
+	</ul> 
+	<p>For a complete list of information you can get through My Account, go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account</a>.</p> 
+	<p>If you can’t find the information you are looking for at My Account, call <strong>1-800-959-8281</strong></p>
+	
+	<h2 id="h-2">Access your business information</h2>
+	<p>Go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> to get the following information:</p> 
+		<ul>
+			<li>Tax returns</li>
+			<li>Corporate account balance</li>
+			<li>Account transactions</li>
+			<li>Notices of assessment or reassessment</li>
+		</ul>
+<p>For a complete list of information you can get through My Business Account, go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html">Services in My Business Account</a>.</p>   
+	<p>If you can’t find the information you are looking for at My Business Account, call <strong>1-800-959-8281</strong></p>
+	
+	<h2 id="h-3">Information about registered charities </h2>
+	<p> If you are looking for a registered charity’s or <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">other qualified donee's</a>information that is available to the public.You don’t need to make a formal ATI request. This information can be accessed online through: </p>  
+	<ul class="list-unstyled cnjnctn-type-or">
+      <li class="cnjnctn-col-50">
+        <p>the <a herf="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities</a></p>
+      </li>
+      <li class="cnjnctn-col">
+        <p>by making an <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information</a>.</p>
+      </li>
+</ul>
+		   <p>These methods are at no cost, and you will be able to access the information you are looking for much faster than by making a formal ATI request. Go to <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.</p> 
+ 
+	<h2 id="h-4">CRA's information holdings</h2> 
+	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a herf="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services </a>. This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
+		
+	<h2 id="h-5">Other information available online</h2> 	
+	<p>Through our commitment to transparency, the following information is available:</p> 
 	<ul>
-    <li>copies of individual’s tax slips </li>
-    <li>business information returns </li>
-    <li>the CRA’s policy manuals </li>  
-	</ul> 
-	<p>Steps for accessing information:</p>
-	<ol class="lst-stps">
-		<li> 
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/get-ready.html">Check if the information you need is already accessible through CRA services.</a></h3>
-			<p>Typically, this method is the quickest way to obtain the information you require. </p>
-		</li>
-		<li>
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">make an access to information or personal information request</a></h3>
-			<p>If the information you need isn’t available,make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act; no fee for requests for personal information under the Privacy Act. </p>
-		</li>
+<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">Completed access to information requests</a></li>
+<li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&amp;f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&amp;travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&amp;owner_org=cra-arc&amp;page=1&amp;sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>
+<li><a href="http://open.canada.ca/en/search/travelq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>
+<li><a href="http://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Hospitality expenditures for senior CRA officials</a></li>
+<li><a href="http://open.canada.ca/en/search/contracts?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>
+<li><a href="http://open.canada.ca/en/search/grants?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a></li>
+<li><a href="http://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>
+<li><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>
+<li><a href="http://open.canada.ca/data/en/dataset?sort=&amp;q=canada+revenue+agency&amp;organization=cra-arc">Open Data</a></li>
+</ul>
+	<ul class="pager pagination-sm">
+<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/request-information-canada-revenue-agency.html" rel="prev">Home</a></li>
+<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/step-2-make-access-information-personal-information-request.html" rel="next">Step 2</a></li>
+</ul>	
 	
-	</ol>
-
-</div>
-
-<h2>Contact us </h2> 
-	<p>Our ATIP general mailbox representatives can provide you with: </p> 
-	<ul> 
-		<li>General information on how to make an access to information or personal information request to the CRA</li> 
-		<li>Information on whether your Access to information or personal information request has been received at the CRA</li>
-	</ul> 
-<p><strong>Telephone:</strong></p> 
-	<ul> 
-		<li>613-960-5393 (Ottawa area)</li>  
-		<li>1-866-333-5402 (toll free)</li>
-	</ul> 
-<p><strong>Email:</strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>  
-<p>Note: To send a formal request or to find other ways to ask for information from the CRA, see <a href="#Request">request information from the CRA</a>.   </p>
-	</main>
   </section>
 	      
     <div class="mwsgeneric-base-html parbase section">
