--- a/step-1-find-information-already-available.html
+++ b/step-1-find-information-already-available.html
@@ -159,9 +159,9 @@
         <ul>
           <li><a href="#h-1">Access your personal information</a></li>
           <li><a href="#h-2">Access your business information </a></li> 
-	  <li><a herf ="#h-3">information about registered charities</a></li> 
-	  <li><a herf ="#h-4">CRA's information holdings</a></li> 
-	  <li><a herf ="#h-5">Other informatino available online</a></li>
+	  <li><a herf="#h-3">information about registered charities</a></li> 
+	  <li><a herf="#h-4">CRA's information holdings</a></li> 
+	  <li><a herf="#h-5">Other informatino available online</a></li>
         </ul>	 
 	
 <h2 id="h-1">Access your personal information</h2>
@@ -190,18 +190,18 @@
 	
 	<h2 id="h-3">Information about registered charities </h2>
 	<p> If you are looking for a registered charity’s or <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">other qualified donee's</a>information that is available to the public.You don’t need to make a formal ATI request. This information can be accessed online through: </p>  
-	<ul class="list-unstyled cnjnctn-type-or">
-      <li class="cnjnctn-col-50">
+	<ul class="list-unstyled cnjnctn-type-or cnjnctn-lg">
+      <li class="cnjnctn-col">
         <p>the <a herf="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities</a></p>
       </li>
       <li class="cnjnctn-col">
-        <p>by making an <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information</a>.</p>
+        <p>by making an <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information.</a></p>
       </li>
 </ul>
 		   <p>These methods are at no cost, and you will be able to access the information you are looking for much faster than by making a formal ATI request. Go to <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.</p> 
  
 	<h2 id="h-4">CRA's information holdings</h2> 
-	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a herf="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services </a>. This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
+	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a herf="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services.</a> This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
 		
 	<h2 id="h-5">Other information available online</h2> 	
 	<p>Through our commitment to transparency, the following information is available:</p> 
@@ -217,7 +217,7 @@
 <li><a href="http://open.canada.ca/data/en/dataset?sort=&amp;q=canada+revenue+agency&amp;organization=cra-arc">Open Data</a></li>
 </ul>
 	<ul class="pager pagination-sm">
-<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/request-information-canada-revenue-agency.html" rel="prev">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/step-2-make-access-information-personal-information-request.html" rel="next">Step 2</a></li>
 </ul>	
 	
