--- a/step-1-find-information-already-available.html
+++ b/step-1-find-information-already-available.html
@@ -159,13 +159,13 @@
         <ul>
           <li><a href="#h-1">Access your personal information</a></li>
           <li><a href="#h-2">Access your business information </a></li> 
-	  <li><a herf="#h-3">information about registered charities</a></li> 
-	  <li><a herf="#h-4">CRA's information holdings</a></li> 
-	  <li><a herf="#h-5">Other informatino available online</a></li>
+	  <li><a href="#h-3">Information about registered charities</a></li>  
+	  <li><a href="#h-4">CRA's information holdings</a></li> 
+	  <li><a href="#h-5">Other information available online</a></li> 
         </ul>	 
 	
 <h2 id="h-1">Access your personal information</h2>
-	<p>Go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a> to get the following information:</p> 
+	<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a> to get the following information:</p> 
 	<ul> 
 	<li>Personal income tax returns</li>  
 	<li>Information slips (for example, T4, T4A, T5, RRSP receipts)</li> 
@@ -174,34 +174,34 @@
 	<li>Personal information, such as addresses, direct deposit and representative authorizations</li> 
 	<li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>
 	</ul> 
-	<p>For a complete list of information you can get through My Account, go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account</a>.</p> 
+	<p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account</a>.</p> 
 	<p>If you can’t find the information you are looking for at My Account, call <strong>1-800-959-8281</strong></p>
 	
 	<h2 id="h-2">Access your business information</h2>
-	<p>Go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> to get the following information:</p> 
+	<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> to get the following information:</p> 
 		<ul>
 			<li>Tax returns</li>
 			<li>Corporate account balance</li>
 			<li>Account transactions</li>
 			<li>Notices of assessment or reassessment</li>
 		</ul>
-<p>For a complete list of information you can get through My Business Account, go to <a herf="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html">Services in My Business Account</a>.</p>   
+<p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html">Services in My Business Account</a>.</p>   
 	<p>If you can’t find the information you are looking for at My Business Account, call <strong>1-800-959-8281</strong></p>
 	
 	<h2 id="h-3">Information about registered charities </h2>
-	<p> If you are looking for a registered charity’s or <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">other qualified donee's</a>information that is available to the public.You don’t need to make a formal ATI request. This information can be accessed online through: </p>  
+	<p> If you are looking for a registered charity’s or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">other qualified donee's</a>information that is available to the public.You don’t need to make a formal ATI request. This information can be accessed online through: </p>  
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-lg">
       <li class="cnjnctn-col">
-        <p>the <a herf="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities</a></p>
+        <p>the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities</a></p>
       </li>
       <li class="cnjnctn-col">
-        <p>by making an <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information.</a></p>
+        <p>by making an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information.</a></p>
       </li>
 </ul>
-		   <p>These methods are at no cost, and you will be able to access the information you are looking for much faster than by making a formal ATI request. Go to <a herf="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.</p> 
+		   <p>These methods are at no cost, and you will be able to access the information you are looking for much faster than by making a formal ATI request. Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.</p> 
  
 	<h2 id="h-4">CRA's information holdings</h2> 
-	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a herf="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services.</a> This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
+	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services.</a> This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
 		
 	<h2 id="h-5">Other information available online</h2> 	
 	<p>Through our commitment to transparency, the following information is available:</p> 
