--- a/index.html
+++ b/index.html
@@ -149,52 +149,43 @@
 </div>
 
 	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/">Access to Information Act </a> 
-	and the <a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act.</a>The Access to Information and Privacy (ATIP)  
-	Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.  </p>
+	and the <a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act.</a>ensuring public access to government records and personal information. The Access to Information and Privacy (ATIP) Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.</p>
   <section class="alert alert-info">
   <h3>What's new</h3>
-  <p>The Canada Revenue Agency (CRA) is updating its process for handling representatives’ access to information and privacy (ATIP) requests  
-	  <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a></p>
+  <p>The Canada Revenue Agency (CRA) is updating its process for handling representatives’ access to information and privacy (ATIP) requests <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a></p>
 </section>
-	
-<div class="mwsbodytext text parbase section">   
-<h2 id="Request">Request information from the Canada Revenue Agency</h2> 
-	<p>You can get many types of information from the Canada Revenue Agency (CRA), including: </p>
-	<ul>
-    <li>copies of individual’s tax slips </li>
-    <li>business information returns </li>
-    <li>the CRA’s policy manuals </li>  
-	</ul> 
-	<p>Steps for accessing information:</p>
-	<ol class="lst-stps">
-		<li> 
-			<h3><a href="step-1-find-information-already-available.html">Check if the information you need is already accessible through CRA services.</a></h3>
-			<p>Typically, this method is the quickest way to obtain the information you require. </p>
-		</li>
-		<li>
-			<h3><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc/calculate.html">make an access to information or personal information request</a></h3>
-			<p>If the information you need isn’t available,make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act; no fee for requests for personal information under the Privacy Act. </p>
-		</li>
-	
-	</ol>
-
-</div>
-
-<h2>Contact us </h2> 
-	<p>Our ATIP general mailbox representatives can provide you with: </p> 
-	<ul> 
-		<li>General information on how to make an access to information or personal information request to the CRA</li> 
-		<li>Information on whether your Access to information or personal information request has been received at the CRA</li>
-	</ul> 
-<p><strong>Telephone:</strong></p> 
-	<ul> 
-		<li>613-960-5393 (Ottawa area)</li>  
-		<li>1-866-333-5402 (toll free)</li>
-	</ul> 
-<p><strong>Email:</strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>  
-<p>Note: To send a formal request or to find other ways to ask for information from the CRA, see <a href="#Request">request information from the CRA</a>.   </p>
+<!-- Navigation menu and first H1 -->
+		<nav class="gc-subway provisional">
+			<h1>Access to information and privacy at the Canada Revenue Agency</h1>
+			<ul>
+				<li><a href="#" class="active">What is Access to information and Privacy at CRA </a></li>
+        			<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/who-claim-ch-itc.html">Find information already available </a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/projects-qualify-ch-itc.html">What you will need to make a request</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/project-plan-ch-itc.html">How to submit an ATIP request</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/review-decision-ch-itc.html">Our review and decision</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc.html">Ways to receive requested records</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/after-claim-ch-itc.html">Contact us</a></li>
+			</ul>
+	    </nav>	
+<!-- Supporting links -->
+		<aside>
+		   <h2 id="resource" class="h3">Publications</h2>
+		   <ul>
+			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/cra-annual-reports-parliament-on-administration-access-information-act-privacy-act.html">CRA's annual reports to Parliament on the administration of the Access to Information Act and the Privacy Act</a></li> 
+		   </ul>
+		</aside> 
+	<aside>
+		   <h2 id="resource" class="h3">Related information</h2>
+		   <ul>
+			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/frequently-asked-questions.html">Frequently asked questions</a></li>  
+			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/your-rights-under-access-information-act-privacy-act.html">Your rights under the Access to Information Act and Privacy Act</a></li>  
+			<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>  
+			<li><a href="https://www.canada.ca/en/revenue-agency/corporate/privacy-notice.html">Privacy notice</a></li>  
+			<li><a href="https://www.oic-ci.gc.ca/en">Office of the Information Commissioner of Canada's web site</a></li> 
+		   </ul>
+		</aside>
 	</main>
-  </section>
+
 	      
     <div class="mwsgeneric-base-html parbase section">
 
