--- a/step-1-find-information-already-available.html
+++ b/step-1-find-information-already-available.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>Claiming the credit - Clean Hydrogen (CH) Investment Tax Credit (ITC) - Canada.ca</title>
+      <title>Find information already available - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -142,11 +142,22 @@
       </header>
 	   <br>
 <main role="main" property="mainContentOfPage" class="container">
-
+<!-- Navigation menu and first H1 -->
+		<nav class="gc-subway provisional">
+			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<ul>
+				<li><a href="#" class="active">What is Access to information and Privacy at CRA </a></li>
+        			<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/who-claim-ch-itc.html">Find information is already available </a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/projects-qualify-ch-itc.html">What you will need to make a request</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/project-plan-ch-itc.html">How to submit an ATIP request</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/review-decision-ch-itc.html">Ways to receive requested recordsn</a></li>
+				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc.html">Contact us</a></li>
+			</ul>
+	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Step 1- Find out if the information is already available</h1> 
-	<p>Before sumitting an Access to Information (ATIP) request, you can find the information you need already available through the Canada Revenue Agency (CRA) online services. Accessing information through My Account or My Business Account is the quickest and most efficient method</p>
+		<h1 property="name" id="wb-cont" class="gc-thickline">What is Access to information and Privacy at CRA </h1> 
+	<p>The Canada Revenue Agency  (CRA) is guided by the Access to Information Act and the Privacy Act, which provide frameworks for public access to information and personal data protection.</p>
 
   <section class="alert alert-info">
   <h3>CRA does not have</h3>
