--- a/step-1-find-information-already-available.html
+++ b/step-1-find-information-already-available.html
@@ -157,83 +157,23 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">What is Access to information and Privacy at CRA </h1> 
-	<p>The Canada Revenue Agency  (CRA) is guided by the Access to Information Act and the Privacy Act, which provide frameworks for public access to information and personal data protection.</p>
+	<p>The Canada Revenue Agency  (CRA) is guided by the <a class="wb-lbx" role="button" aria-controls="AIA" href="#AIA">Access to Information Act<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> and the <a class="wb-lbx" role="button" aria-controls="PA" href="#PA">Privacy Act<span class="mrgn-lft-sm far fa-question-circle"></span></span></a>, which provide frameworks for public access to information and personal data protection.</p>
+<section id="AIA" class="mfp-hide modal-dialog modal-content overlay-def">
+			<header class="modal-header"><h2 class="modal-title">Access to information Act</h2></header>
+			<div class="modal-body">
+			<p>This Act allows individuals to request records from federal institution. It aims to enhance openness and accountability by providing the public with the means to obtain information about government activities, other than personal data, which is nor readily available. </p>
+			</div>
+		</section>  
+<section id="PA" class="mfp-hide modal-dialog modal-content overlay-def">
+			<header class="modal-header"><h2 class="modal-title">Privacy Act</h2></header>
+			<div class="modal-body">
+			<p>The Privacy Act governs how federal institutions handle personal information. It ensures that individuals have the right to access personal information held by the government and sets strict controls on how this information is collected, used, disclosed, and disposed of.    </p>
+			</div>
+		</section> 
 
-  <section class="alert alert-info">
-  <h3>CRA does not have</h3>
-  <ul> 
-   <li>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Go to <a herf="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html">Service Canada</a>.</li> 
- <li>Information about your travel history outside Canada. Go to <a herf="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html">Canada Border Services Agency</a>.</li>
-  </ul>
-</section> 
-<h2 class="h3">On this page</h2>
-        <ul>
-          <li><a href="#h-1">Access your personal information</a></li>
-          <li><a href="#h-2">Access your business information </a></li> 
-	  <li><a href="#h-3">Information about registered charities</a></li>  
-	  <li><a href="#h-4">CRA's information holdings</a></li> 
-	  <li><a href="#h-5">Other information available online</a></li> 
-        </ul>	 
-	
-<h2 id="h-1">Access your personal information</h2>
-	<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a> to get the following information:</p> 
-	<ul> 
-	<li>Personal income tax returns</li>  
-	<li>Information slips (for example, T4, T4A, T5, RRSP receipts)</li> 
-	<li>Notices of assessment or reassessment</li>  
-	<li>Statements of income and deductions from the past 3 assessed years</li> 
-	<li>Personal information, such as addresses, direct deposit and representative authorizations</li> 
-	<li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>
-	</ul> 
-	<p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account</a>.</p> 
-	<p>If you can’t find the information you are looking for at My Account, call <strong>1-800-959-8281</strong></p>
-	
-	<h2 id="h-2">Access your business information</h2>
-	<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> to get the following information:</p> 
-		<ul>
-			<li>Tax returns</li>
-			<li>Corporate account balance</li>
-			<li>Account transactions</li>
-			<li>Notices of assessment or reassessment</li>
-		</ul>
-<p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html">Services in My Business Account</a>.</p>   
-	<p>If you can’t find the information you are looking for at My Business Account, call <strong>1-800-959-8281</strong></p>
-	
-	<h2 id="h-3">Information about registered charities </h2>
-	<p> If you are looking for a registered charity’s or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">other qualified donee's</a>information that is available to the public.You don’t need to make a formal ATI request. This information can be accessed online through: </p>  
-	<ul class="list-unstyled cnjnctn-type-or cnjnctn-lg">
-      <li class="cnjnctn-col">
-        <p>the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities</a></p>
-      </li>
-      <li class="cnjnctn-col">
-        <p>by making an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">informal request for a charity’s or other qualified donee’s information.</a></p>
-      </li>
-</ul>
-		   <p>These methods are at no cost, and you will be able to access the information you are looking for much faster than by making a formal ATI request. Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.</p> 
- 
-	<h2 id="h-4">CRA's information holdings</h2> 
-	<p> You can find detialed information holdings managed by the Canada Revenue Agency at <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Information about Info Source and the Reading Room Services.</a> This includes government documents, records, and other digital resources that provide data support for the public and government departments.  
-		
-	<h2 id="h-5">Other information available online</h2> 	
-	<p>Through our commitment to transparency, the following information is available:</p> 
-	<ul>
-<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">Completed access to information requests</a></li>
-<li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&amp;f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&amp;travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&amp;owner_org=cra-arc&amp;page=1&amp;sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>
-<li><a href="http://open.canada.ca/en/search/travelq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>
-<li><a href="http://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Hospitality expenditures for senior CRA officials</a></li>
-<li><a href="http://open.canada.ca/en/search/contracts?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>
-<li><a href="http://open.canada.ca/en/search/grants?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a></li>
-<li><a href="http://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>
-<li><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>
-<li><a href="http://open.canada.ca/data/en/dataset?sort=&amp;q=canada+revenue+agency&amp;organization=cra-arc">Open Data</a></li>
-</ul>
-	<ul class="pager pagination-sm">
-<li><a href="index.html">Home</a></li>
-<li><a href="/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/step-2-make-access-information-personal-information-request.html" rel="next">Step 2</a></li>
-</ul>	
-	
-  </section>
-	      
+<p>Before making a formal request, please check if the information you need is already accessible through CRA online services. Typically, this is the <strong>quickest</strong> way to obtain the information you require. </p> 
+<p>If the information your need isn’t available, make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act.</p>
+       
     <div class="mwsgeneric-base-html parbase section">
 
     <div class="container pagedetails">
