--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<nav class="gc-subway provisional">
 			<h2>Sections</h2>
 			<dl>
-				<dt><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/about-ch-itc.html">What is Access to information and Privacy at CRA </a></dt>
+				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></dt>
 				<dd>Description of Access to information and Privacy at CRA</dd>
 				
 				<dt><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/who-claim-ch-itc.html">Find information already available </a></dt>
