Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -161,7 +161,7 @@
 <section id="AIA" class="mfp-hide modal-dialog modal-content overlay-def">
 			<header class="modal-header"><h2 class="modal-title">Access to information Act</h2></header>
 			<div class="modal-body">
-			<p>This Act allows individuals to request records from federal institution. It aims to enhance openness and accountability by providing the public with the means to obtain information about government activities, other than personal data, which is nor readily available. </p>
+			<p>This Act allows individuals to request records from federal institution. It aims to enhance openness and accountability by providing the public with the means to obtain information about government activities, other than personal data, which is not readily available. </p>
 			</div>
 		</section>  
 <section id="PA" class="mfp-hide modal-dialog modal-content overlay-def">
