--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -179,7 +179,7 @@
           <li><a href="#charities">Information about registered charities </a></li> 
           <li><a href="#other">Other information available online</a></li>
         </ul>	
-<h2 id="expend">Access your personal information</h2>
+<h2 id="peronal">Access your personal information</h2>
 <p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account for your:</a></p> 
   <ul> 
     <li>Personal income tax returns</li>  
@@ -191,8 +191,57 @@
   </ul> 
   <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a>
 Or call the individual tax enquiries line at 1-800-959-8281 to request tax and benefit documents. 
-</p>
-       
+</p>  
+	
+<h2 id="business">Access your business information </h2>
+<p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account for your:</a></p> 
+  <ul> 
+    <li>Tax returns</li>  
+    <li>Corporate account balance</li> 
+    <li>Account transactions</li>  
+    <li>notices of assessment or reassessment</li>
+  </ul> 
+  <p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html"></a>What can I do on my Business Account.
+Or call the business enquiries line at 1-800-959-5525 to request corporate income tax documents.  
+</p> 
+
+<h2 id="CRA">CRA's information holdings</h2>
+<p>Many of the records held by the Canada Revenue Agency (CRA)  are readily accessible to the public, this includes:</p> 
+  <ul> 
+    <li>Policy manuals </li>  
+    <li>Financial records </li> 
+    <li>Account transactions</li>  
+    <li>Information about government operations </li>
+  </ul> 
+  <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source and the Reading Room Services</a> to explore available information.
+</p> 
+<h2 id="charities">Accessing information about registered charities and other qualified donee does not require a formal request. Here are ways you can obtain this information quickly and at no cost: </p> 
+  <ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col"> 
+    <h3>Online list of charities and other qualified donee:</h3>
+    <p>The CRA maintains a <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities and other qualified donees</a>. This searchable database allows you to view information about each organization, including their status and publicly available financial documents. </p>
+  </li>
+  <li class="cnjnctn-col">
+    <p>If you need more information about a particular charity or other qualified donees, you can make an informal request. This is often faster and more direct than going through a formal request. For guidance on how to make an informal request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">Request registered charity information</a>.</p>
+  </li>
+</ul>
+  <p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity for more information</a>.
+</p> 
+<h2 id="other">Other information available online</h2>
+<p>In support of our committed to transparency, you can also find the following information online:</p> 
+  <ul> 
+    <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">	Previously completed access to information requests</a></li>  
+    <li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&owner_org=cra-arc&page=1&sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>   
+    <li><a href="https://search.open.canada.ca/travelq/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
+    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Hospitality expenditures for senior CRA officials</a></li>   
+    <li><a href="https://search.open.canada.ca/contracts/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>   
+    <li><a href="https://search.open.canada.ca/grants/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
+    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a></li>  
+    <li><a href="https://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>  
+    <li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>   
+    <li><a href="https://search.open.canada.ca/opendata/?sort=&q=canada+revenue+agency&organization=cra-arc">Open Data </a></li> 
+  </ul> 
+ 
     <div class="mwsgeneric-base-html parbase section">
 
     <div class="container pagedetails">
