Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -173,7 +173,14 @@
 
 <p>Before making a formal request, please check if the information you need is already accessible through CRA online services. Typically, this is the <strong>quickest</strong> way to obtain the information you require. </p> 
 <p>If the information your need isn’t available, make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act.</p>
-       
+
+	<!-- Pagination -->
+		<nav class="gc-subway-pagination">
+			<h2 class="wb-inv">Document navigation</h2>
+			<ul class="pager">
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html" rel="next"><span class="wb-inv">Next: </span>Find information is already available</a></li>
+			</ul>
+		</nav>
     <div class="mwsgeneric-base-html parbase section">
 
     <div class="container pagedetails">
