--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -241,7 +241,13 @@ Or call the business enquiries line at 1-800-959-5525 to request corporate incom
     <li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>   
     <li><a href="https://search.open.canada.ca/opendata/?sort=&q=canada+revenue+agency&organization=cra-arc">Open Data </a></li> 
   </ul> 
- 
+ <!-- Pagination -->
+		<nav class="gc-subway-pagination">
+			<h2 class="wb-inv">Document navigation</h2>
+			<ul class="pager">
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html" rel="next"><span class="wb-inv">Next: </span>Submitting your project plan</a></li>
+			</ul>
+		</nav>
     <div class="mwsgeneric-base-html parbase section">
 
     <div class="container pagedetails">
