--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -215,13 +215,15 @@ Or call the business enquiries line at 1-800-959-5525 to request corporate incom
   </ul> 
   <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source and the Reading Room Services</a> to explore available information.
 </p> 
-<h2 id="charities">Accessing information about registered charities and other qualified donee does not require a formal request. Here are ways you can obtain this information quickly and at no cost: </p> 
+<h2 id="charities">Access information about registered charities </h2>  
+<p>Accessing information about registered charities and other qualified donee does not require a formal request. Here are ways you can obtain this information quickly and at no cost: </p>
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
   <li class="cnjnctn-col"> 
     <h3>Online list of charities and other qualified donee:</h3>
     <p>The CRA maintains a <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities and other qualified donees</a>. This searchable database allows you to view information about each organization, including their status and publicly available financial documents. </p>
   </li>
-  <li class="cnjnctn-col">
+  <li class="cnjnctn-col"> 
+    <h3>Informal requests for charity information: </h3>
     <p>If you need more information about a particular charity or other qualified donees, you can make an informal request. This is often faster and more direct than going through a formal request. For guidance on how to make an informal request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">Request registered charity information</a>.</p>
   </li>
 </ul>
