--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -227,7 +227,7 @@ Or call the business enquiries line at 1-800-959-5525 to request corporate incom
     <p>If you need more information about a particular charity or other qualified donees, you can make an informal request. This is often faster and more direct than going through a formal request. For guidance on how to make an informal request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">Request registered charity information</a>.</p>
   </li>
 </ul>
-  <p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity for more information</a>.
+  <p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.
 </p> 
 <h2 id="other">Other information available online</h2>
 <p>In support of our committed to transparency, you can also find the following information online:</p> 
