--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -179,7 +179,7 @@
           <li><a href="#charities">Information about registered charities </a></li> 
           <li><a href="#other">Other information available online</a></li>
         </ul>	
-<h2 id="peronal">Access your personal information</h2>
+<h2 id="personal">Access your personal information</h2>
 <p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account for your:</a></p> 
   <ul> 
     <li>Personal income tax returns</li>  
