--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -243,7 +243,7 @@ Or call the business enquiries line at 1-800-959-5525 to request corporate incom
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
 			<ul class="pager">
-				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html" rel="next"><span class="wb-inv">Next: </span>Requirements to make an ATIP request</a></li>
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html" rel="next"><span class="wb-inv">Next: </span>Submitting an ATIP request</a></li>
 			</ul>
 		</nav>
     <div class="mwsgeneric-base-html parbase section">
