--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/submit-aN-ATIP-request">What you will need to make a request</a></dt>
 				<dd>Eligibility and what you will need to make a request</dd>
 				
-				<dt><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/project-plan-ch-itc.html">How to submit an ATIP request</a></dt>
+				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html.html">How to submit an ATIP request</a></dt>
 				<dd>Use ATIP online request service (AORS) or by mail   </dd>
 				
 				<dt><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc.html">Ways to receive requested records</a></dt>
