--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -156,9 +156,16 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request h1> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request<h1> 
 	<p>Once you have gathered all the required information, you can submit your access to information and privacy (ATIP) requests through two methods: </p> 
-
+<h2 class="h3">ATIP Online Request Service (AORS) </h2> 
+<p>To use online method, you must first <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html">create a secure ATIP Online account</a>. AORS allows you quickly and securely submit your requests and receive your records. This will give you access to free features, including the ability to:  </p> 
+<ul> 
+	<li>Receive a copy of your records electronicallyli</li> 
+	<li>Access the status of your requests</li> 
+	<li>Communicate directly with the Access to Information and Privacy Directoratets</li> 
+</ul> 
+<p>After creating an AORS account, You must send access to information and privacy (ATIP) requests to the Canada Revenue Agency (CRA) through the new <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information.html">ATIP Online Request Service (AORS).</a> </p>
 <h2 class="h3">By mail </h2> 
 <p>Send everything listed under <a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a>  in your letter or Completed <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request Form</a> to the following address:</p> 
 <p>Director General, ATIP Directorate<br>
