--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -156,7 +156,7 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request<h1> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request</h1> 
 	<p>Once you have gathered all the required information, you can submit your access to information and privacy (ATIP) requests through two methods: </p> 
 <h2 class="h3">ATIP Online Request Service (AORS) </h2> 
 <p>To use online method, you must first <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html">create a secure ATIP Online account</a>. AORS allows you quickly and securely submit your requests and receive your records. This will give you access to free features, including the ability to:  </p> 
