--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></dt>
 				<dd>Use ATIP online request service (AORS) or by mail   </dd>
 				
-				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html>"Ways to receive requested records</a></dt>
+				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></dt>
 				<dd>Records can received by electronically, paper or in person</dd>
 			
 				<dt><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/after-claim-ch-itc.html">Contact us</a></dt>
