--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -146,12 +146,12 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
-				<li><a href="#" class="active">What is Access to information and Privacy at CRA </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information is already available </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/review-decision-ch-itc.html">Ways to receive requested recordsn</a></li>
-				<li><a href="https://cra-proto.github.io/clean-economy/clean-economy-itc/clean-hydrogen-itc/claiming-credit-ch-itc.html">Contact us</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-reques.html">How to submit an ATIP request</a></li>
+				<li><a href="#",class="active">Ways to receive requested recordsn</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html">Contact us</a></li>
 			</ul>
 	    </nav>
 
