--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -149,7 +149,7 @@
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></li>
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information is already available </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
-				<li><a href="#",class="active">How to submit an ATIP request</a></li>
+				<li><a href="#" class="active">How to submit an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested recordsn</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html">Contact us</a></li>
 			</ul>
@@ -173,11 +173,11 @@ Canada Revenue Agency<br>
 555 MacKenzie Avenue, 5th Floor<br>
 Ottawa ON&nbsp; K1A 0L5&nbsp;</p>
 
- <!-- Pagination -->
+<!-- Pagination -->
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
 			<ul class="pager">
-				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html" rel="next"><span class="wb-inv">Next: </span>Contact us</a></li>
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html" rel="next"><span class="wb-inv">Next: </span>Ways to receive records</a></li>
 			</ul>
 		</nav>
     <div class="mwsgeneric-base-html parbase section">
