--- a/contact-us.html
+++ b/contact-us.html
@@ -164,9 +164,30 @@
   </ul> --> 
 <dl class="dl-horizontal brdr-0">
             <dt><strong>Telephone number:</strong></dt>
-            <dd><a class="hidden-md hidden-lg nowrap" href="tel:613-960-5393"><span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393</strong></dd 
-																														 
-<dd><a class="hidden-md hidden-lg nowrap" href="tel:1-866-333-5402"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-333-5402<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"></span>613-960-5393</strong></dd>
+		<dd>
+              <table class="table">
+                <caption class="wb-inv">
+                Dedicated phone numberes
+                </caption>
+                <thead>
+                  <tr>
+                    <th class="wb-inv" scope="col">Numbers</th>
+                    <th class="wb-inv" scope="col">condition</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>613-960-5359</td>
+                    <td>Ottawa area</td>
+                  </tr>
+                  <tr>
+                    <td>1-866-333-5402</td>
+                    <td>Toll free</td>
+                  </tr>
+        
+                </tbody>
+              </table>
+            </dd>																												 
             <dt>Hours:</dt>
             <dd>
               <table class="table">
